Updated Kibana 3 nginx configuration

--- a/kibana3/config/nginx.conf
+++ b/kibana3/config/nginx.conf
@@ -24,7 +24,7 @@ http {
 
   # Kibana static site:
   server {
-    listen       5601; # We'll mimic the Kibana 4 port...
+    listen       80;
     server_name  localhost;
 
     location / {
