Update de config de Kibana 4 rc1

--- a/kibana4/config/kibana.yml
+++ b/kibana4/config/kibana.yml
@@ -5,7 +5,7 @@
 host: "0.0.0.0"
 
 # The Elasticsearch instance to use for all your queries.
-elasticsearch: "http://localhost:9200"
+elasticsearch_url: "http://localhost:9200"
 
 # Kibana uses an index in Elasticsearch to store saved searches, visualizations
 # and dashboards. It will create a new index if it doesn't already exist.
